Remove configuration
As discussed with Adnreas, we don't need configurations for booking app.
It'll simplify usage and code.
