# apiserver/api.go
@@ -24,17 +24,6 @@ type BookingAPIRouter interface {
 	BookingsPost(http.ResponseWriter, *http.Request)
 }
 
-// ConfigurationAPIRouter defines the required methods for binding the api requests to a responses for the ConfigurationAPI
-// The ConfigurationAPIRouter implementation should parse necessary information from the http request,
-// pass the data to a ConfigurationAPIServicer to perform the required actions, then write the service results to the http response.
-type ConfigurationAPIRouter interface {
-	DeleteConfigurationById(http.ResponseWriter, *http.Request)
-	GetConfigurationById(http.ResponseWriter, *http.Request)
-	GetConfigurations(http.ResponseWriter, *http.Request)
-	PostConfiguration(http.ResponseWriter, *http.Request)
-	PutConfigurationById(http.ResponseWriter, *http.Request)
-}
-
 // VersionAPIRouter defines the required methods for binding the api requests to a responses for the VersionAPI
 // The VersionAPIRouter implementation should parse necessary information from the http request,
 // pass the data to a VersionAPIServicer to perform the required actions, then write the service results to the http response.
@@ -52,18 +41,6 @@ type BookingAPIServicer interface {
 	BookingsBookingIdRegisterGuestPost(context.Context, string, BookingsBookingIdRegisterGuestPostRequest) (ImplResponse, error)
 	BookingsGet(context.Context, string, string, string) (ImplResponse, error)
 	BookingsPost(context.Context, CreateBookingRequest) (ImplResponse, error)
-}
-
-// ConfigurationAPIServicer defines the api actions for the ConfigurationAPI service
-// This interface intended to stay up to date with the openapi yaml used to generate it,
-// while the service implementation can be ignored with the .openapi-generator-ignore file
-// and updated with the logic required for the API.
-type ConfigurationAPIServicer interface {
-	DeleteConfigurationById(context.Context, int64) (ImplResponse, error)
-	GetConfigurationById(context.Context, int64) (ImplResponse, error)
-	GetConfigurations(context.Context) (ImplResponse, error)
-	PostConfiguration(context.Context, Configuration) (ImplResponse, error)
-	PutConfigurationById(context.Context, int64, Configuration) (ImplResponse, error)
 }
 
 // VersionAPIServicer defines the api actions for the VersionAPI service
