# apiserver/model_configuration.go
@@ -1,36 +1,0 @@
-/*
- * Booking App
- *
- * API to access and configure the Booking App
- *
- * API version: 1.1.0
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package apiserver
-
-// Configuration - Configuration.
-type Configuration struct {
-
-	// Internal identifier for the configured API (created automatically).
-	Id *int64 `json:"id,omitempty"`
-
-	// Flag to enable or disable fetching from this API
-	Enable *bool `json:"enable,omitempty"`
-
-	// Set to `true` by the app when running and to `false` when app is stopped
-	Active *bool `json:"active,omitempty"`
-
-	// List of Eliona project ids for which this device should collect data.
-	ProjectIDs *[]string `json:"projectIDs,omitempty"`
-}
-
-// AssertConfigurationRequired checks if the required fields are not zero-ed
-func AssertConfigurationRequired(obj Configuration) error {
-	return nil
-}
-
-// AssertConfigurationConstraints checks if the values respects the defined constraints
-func AssertConfigurationConstraints(obj Configuration) error {
-	return nil
-}
