# apiservices/api_configuration_service.go
@@ -1,95 +1,0 @@
-//  This file is part of the eliona project.
-//  Copyright © 2022 LEICOM iTEC AG. All Rights Reserved.
-//  ______ _ _
-// |  ____| (_)
-// | |__  | |_  ___  _ __   __ _
-// |  __| | | |/ _ \| '_ \ / _` |
-// | |____| | | (_) | | | | (_| |
-// |______|_|_|\___/|_| |_|\__,_|
-//
-//  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING
-//  BUT NOT LIMITED  TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
-//  NON INFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
-//  DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-//  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-
-package apiservices
-
-import (
-	"booking-app/apiserver"
-	"context"
-	"errors"
-	"net/http"
-)
-
-// ConfigurationApiService is a service that implements the logic for the ConfigurationApiServicer
-// This service should implement the business logic for every endpoint for the ConfigurationApi API.
-// Include any external packages or services that will be required by this service.
-type ConfigurationApiService struct {
-}
-
-// NewConfigurationApiService creates a default api service
-func NewConfigurationApiService() apiserver.ConfigurationAPIServicer {
-	return &ConfigurationApiService{}
-}
-
-// DeleteConfigurationById - Deletes a configuration
-func (s *ConfigurationApiService) DeleteConfigurationById(ctx context.Context, configId int64) (apiserver.ImplResponse, error) {
-	// TODO - update DeleteConfigurationById with the required logic for this service method.
-	// Add api_configuration_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
-
-	// TODO: Uncomment the next line to return response Response(204, {}) or use other options such as http.Ok ...
-	// return Response(204, nil),nil
-
-	// TODO: Uncomment the next line to return response Response(400, {}) or use other options such as http.Ok ...
-	// return Response(400, nil),nil
-
-	return apiserver.Response(http.StatusNotImplemented, nil), errors.New("DeleteConfigurationById method not implemented")
-}
-
-// GetConfigurationById - Get configuration
-func (s *ConfigurationApiService) GetConfigurationById(ctx context.Context, configId int64) (apiserver.ImplResponse, error) {
-	// TODO - update GetConfigurationById with the required logic for this service method.
-	// Add api_configuration_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
-
-	// TODO: Uncomment the next line to return response Response(200, Configuration{}) or use other options such as http.Ok ...
-	// return Response(200, Configuration{}), nil
-
-	// TODO: Uncomment the next line to return response Response(400, {}) or use other options such as http.Ok ...
-	// return Response(400, nil),nil
-
-	return apiserver.Response(http.StatusNotImplemented, nil), errors.New("GetConfigurationById method not implemented")
-}
-
-// GetConfigurations - Get example configurations
-func (s *ConfigurationApiService) GetConfigurations(ctx context.Context) (apiserver.ImplResponse, error) {
-	// TODO - update GetConfigurations with the required logic for this service method.
-	// Add api_configuration_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
-
-	//TODO: Uncomment the next line to return response Response(200, []Configuration{}) or use other options such as http.Ok ...
-	//return Response(200, []Configuration{}), nil
-
-	return apiserver.Response(http.StatusNotImplemented, nil), errors.New("GetConfigurations method not implemented")
-}
-
-// PostConfiguration - Creates an example configuration
-func (s *ConfigurationApiService) PostConfiguration(ctx context.Context, configuration apiserver.Configuration) (apiserver.ImplResponse, error) {
-	// TODO - update PostConfiguration with the required logic for this service method.
-	// Add api_configuration_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
-
-	//TODO: Uncomment the next line to return response Response(201, Configuration{}) or use other options such as http.Ok ...
-	//return Response(201, Configuration{}), nil
-
-	return apiserver.Response(http.StatusNotImplemented, nil), errors.New("PostConfiguration method not implemented")
-}
-
-// PutConfigurationById - Updates a configuration
-func (s *ConfigurationApiService) PutConfigurationById(ctx context.Context, configId int64, configuration apiserver.Configuration) (apiserver.ImplResponse, error) {
-	// TODO - update PutConfigurationById with the required logic for this service method.
-	// Add api_configuration_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
-
-	// TODO: Uncomment the next line to return response Response(200, Configuration{}) or use other options such as http.Ok ...
-	// return Response(200, Configuration{}), nil
-
-	return apiserver.Response(http.StatusNotImplemented, nil), errors.New("PutConfigurationById method not implemented")
-}
